# hotline

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  auto_build.bat  hotline.sln  premake5.lua
hotline/: hotline.vcxproj  hotline.vcxproj.filters
hotline/res/shaders/: basic_color.frag  basic_color.vert  basic_texture.frag  basic_texture.vert  colored.frag  colored.vert  textured.frag  textured.vert
hotline/src/: FrameTimer.cpp  FrameTimer.h  Game.h  Log.h  Main.cpp  Stage.h  State.cpp  State.h  Window.cpp  Window.h  b2_user_settings.h
hotline/src/entity/: Camera.h  ECS.h  ECS.inl  ECSComponents.h  Player.h  Weapon.h
hotline/src/entity/components/: AIComponent.h  Combat.cpp  Combat.h  Follow.cpp  Follow.h  Health.cpp  Health.h  Physics.cpp  Physics.h  PlayerControl.cpp  PlayerControl.h  Position.cpp  Position.h  Sprite.cpp  Sprite.h
hotline/src/gfx/: Animation.cpp  Animation.h  Camera.cpp  Camera.h  EBO.cpp  EBO.h  Renderer.cpp  Renderer.h  Renderer.inl  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  TextureBank.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
